# RustRT

./: Cargo.toml  README.md  render.ppm  render01.ppm  render03.ppm  render05.ppm  render07.ppm  render09.ppm
src/: aabb.rs  bvh.rs  camera.rs  interval.rs  main.rs  material.rs  pdf.rs  perlin_noise.rs  ray.rs  texture.rs  window.rs
src/entities/: constant_medium.rs  entity.rs  mod.rs  quad.rs  sphere.rs
src/math/: mat3.rs  mod.rs  rand.rs  vec2.rs  vec3.rs
